--- a/views/account.ejs
+++ b/views/account.ejs
@@ -32,14 +32,14 @@
     </div>
 </div>
 <script>
-    function logout(){
-        var reply = confirm('로그아웃 하시겠습니까?');
-        if (reply == true) {
-            sessionStorage.clear();
-            window.location.href = "/";
-        } else {
-        }
+function logout(){
+    var reply = confirm('로그아웃 하시겠습니까?');
+    if (reply == true) {
+        sessionStorage.clear();
+        window.location.href = "/";
+    } else {
     }
+}
 </script>
 <script>
     var jwtToken = sessionStorage.getItem('jwtToken');
@@ -60,6 +60,7 @@
                 '    <div data-height="150" style="height : 150px" class="caption caption-margins round-medium shadow-large">\n' +
                 '        <div class="caption-center right-15 top-15 text-right">\n' +
                 '            <Button onclick="getBalance(\'' + resultElement.fintech_use_num + '\')" class="button button-xs button-round-huge bg-highlight">잔액조회</Button>\n' +
+                '            <Button onclick="mainAccount(\'' + resultElement.fintech_use_num + '\')" class="button button-xs button-round-huge bg-highlight">주계좌설정</Button>\n' +
                 '        </div>\n' +
                 '        <div class="caption-center left-15 text-left">\n' +
                 '            <h1 class="color-white bolder">' + resultElement.account_alias + '</h1>\n' +
@@ -95,12 +96,28 @@
                 alert("잔액 : " + data + "원");
            } 
          })
-
     }
 
-        function addComma(num) {
-            var regexp = /\B(?=(\d{3})+(?!\d))/g;
-            return num.toString().replace(regexp, ',');
-        }
+    function addComma(num) {
+        var regexp = /\B(?=(\d{3})+(?!\d))/g;
+        return num.toString().replace(regexp, ',');
+    }
+
+    function mainAccount(finusenum){
+        var currentIp = location.host;
+        $.ajax({
+            url : "http://"+currentIp+"/mainAccount",
+            type : 'get',
+            headers: {
+                'x-access-token': jwtToken
+            },
+            data : {
+                finusernum: finusenum
+            },
+            success: function(data){
+                alert("main account가 변경되었습니다");
+           } 
+         })
+    }
 </script>
 <% include ./hf/footer.ejs %>
