--- a/views/account.ejs
+++ b/views/account.ejs
@@ -6,7 +6,7 @@
     </div>
     <div id="footer-menu" class="footer-menu-5-icons footer-menu-style-1">
             <a href="/main"><i class="fa fa-home"></i><span>Home</span></a>
-            <a href="/friends"><i class="fa fa-star"></i><span>Friends</span></a>
+            <a href="/connect"><i class="fa fa-star"></i><span>Connect</span></a>
             <a href="/mypage"><i class="fa fa-heart"></i><span>My page</span></a>
             <a href="/account" class="active-nav"><i class="fa fa-search"></i><span>Account</span></a>
             <a href="#" data-menu="menu-settings"><i class="fa fa-cog"></i><span>Settings</span></a>
