--- a/views/connect.ejs
+++ b/views/connect.ejs
@@ -28,7 +28,7 @@
     
    <div id="footer-menu" class="footer-menu-5-icons footer-menu-style-1">
         <a href="/main"><i class="fa fa-home"></i><span>Home</span></a>
-        <a href="/friends" class="active-nav"><i class="fa fa-star"></i><span>Friends</span></a>
+        <a href="/connect" class="active-nav"><i class="fa fa-star"></i><span>Connect</span></a>
         <a href="/mypage"><i class="fa fa-heart"></i><span>My page</span></a>
         <a href="/account"><i class="fa fa-search"></i><span>Account</span></a>
         <a href="#" data-menu="menu-settings"><i class="fa fa-cog"></i><span>Settings</span></a>
