--- a/views/account.ejs
+++ b/views/account.ejs
@@ -60,10 +60,10 @@ function logout(){
                 '    <div data-height="150" style="height : 150px" class="caption caption-margins round-medium shadow-large">\n' +
                 '        <div class="caption-center right-15 top-15 text-right">\n' +
                 '            <Button onclick="getBalance(\'' + resultElement.fintech_use_num + '\')" class="button button-xs button-round-huge bg-highlight">잔액조회</Button>\n' +
-                '            <Button onclick="mainAccount(\'' + i + '\')" class="button button-xs button-round-huge bg-highlight">주계좌설정</Button>\n' +
+                '            <Button onclick="mainAccount(\'' + String(i) + '\')" class="button button-xs button-round-huge bg-highlight">주계좌설정</Button>\n' +
                 '        </div>\n' +
                 '        <div class="caption-center left-15 text-left">\n' +
-                '            <h1 class="color-white bolder">' + resultElement.account_alias + '</h1>\n' +
+                '            <h1 class="color-white bolder">' + resultElement.bank_name + '</h1>\n' +
                 '            <p class="under-heading color-white opacity-90 bottom-0">\n' +
                 '                ' + resultElement.account_num_masked +
                 '            </p>\n' +
@@ -102,7 +102,7 @@ function logout(){
         return num.toString().replace(regexp, ',');
     }
 
-    function mainAccount(finusenum){
+    function mainAccount(i){
         var currentIp = location.host;
         $.ajax({
             url : "http://"+currentIp+"/mainAccount",
