--- a/views/main.ejs
+++ b/views/main.ejs
@@ -19,7 +19,7 @@
     </div>
     
     <div class="header header-fixed header-logo-app" style="padding-right: 30px">
-        <a href="/main" class="header-title">Photoss</a>
+        <a id='mainTag' href="/main" class="header-title">Photoss</a>
         <a href="#" class="back-button header-icon header-icon-1"><i class="fas fa-arrow-left"></i></a>
         <a onclick="logout();" class="header-icon header-icon-2"><img src="images/icons/exit.png" style="width:20px; height: 33px; padding-top: 14px"></a>
         <a href="#" data-toggle-theme-switch class="header-icon header-icon-3"><i class="fas fa-moon"></i></a>
@@ -223,6 +223,9 @@
 <script type="text/javascript" src="scripts/jquery.js"></script>
 <script type="text/javascript" src="scripts/plugins.js"></script>
 <script type="text/javascript" src="scripts/custom.js"></script>
+<script>
+
+</script>
 <script>     
 var qs = getQueryStringObject();
 if(qs.isFace == "false"){
