--- a/views/login.ejs
+++ b/views/login.ejs
@@ -214,7 +214,7 @@
                     window.location.herㅋf = "/";
                 }
                 if(data.length > 5){
-                    window.location.href = "/main?token="+data;
+                    window.location.href = "/main";
                     // socket.io 서버에 접속한다
                 }
             }
