--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,13 +4,12 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, viewport-fit=cover" />
-<title>Photoss</title>
+<title>StickyMobile</title>
 <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i,900,900i|Source+Sans+Pro:300,300i,400,400i,600,600i,700,700i,900,900i" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="styles/style.css">
 <link rel="stylesheet" type="text/css" href="styles/framework.css">
 <link rel="stylesheet" type="text/css" href="fonts/css/fontawesome-all.min.css">    
 </head>
-<script src="/socket.io/socket.io.js"></script>
     
 <body class="theme-light" data-background="none" data-highlight="blue2">
         
@@ -20,48 +19,43 @@
         <div class="loader-main"><div class="preload-spinner border-highlight"></div></div>
     </div>
     
-   <div class="header header-fixed header-logo-app">
-        <a href="/" class="header-title">Photoss</a>
-
-   </div>
+    <div class="header header-fixed header-logo-app">
+            <a href="/" class="header-title">Photoss</a>
+    </div>
+    
+    <div id="footer-menu" class="footer-menu-5-icons footer-menu-style-1">
+    </div>
         
-    <div class="page-content-black"></div>
     <div class="page-content">   
-        <div class="cover-wrapper cover-no-buttons">
-            <div data-height="cover" class="caption bottom-0">
-                <div class="caption-center">
+        
+        <div data-height="cover-header" class="caption bottom-0">
+            <div class="caption-center">
 
-                    <div class="left-50 right-50 top-50">
-                        <h1 class="color-white center-text uppercase ultrabold fa-4x">LOGIN</h1>
-                        <p class="color-highlight center-text font-12 under-heading bottom-30 top-5">
-                            Let's get you in your account
+                <div class="content-boxed left-40 right-40">
+                    <div class="content top-20 bottom-40">
+                        <h1 class="center-text uppercase ultrabold fa-3x">LOGIN</h1>
+                        <p class="center-text font-11 under-heading bottom-30 color-highlight">
+                            Let's get you logged in
                         </p>
-                        <div class="input-style input-light has-icon input-style-1 input-required">
+                        <div class="input-style has-icon input-style-1 input-required">
                             <i class="input-icon fa fa-user font-11"></i>
                             <span>Email</span>
                             <em>(required)</em>
-                            <input type="name" id="email" placeholder="Email">
+                            <input type="email" id="email" placeholder="Email">
                         </div> 
-                        <div class="input-style input-light has-icon input-style-1 input-required bottom-30">
+                        <div class="input-style has-icon input-style-1 input-required">
                             <i class="input-icon fa fa-lock font-11"></i>
                             <span>Password</span>
                             <em>(required)</em>
                             <input type="password" id="pass" placeholder="Password">
                         </div>          
-                        <div class="one-half">
-                            <a href="pageapp-register.html" class="font-11 color-white opacity-50">Create Account</a>
-                        </div>
-                        <div class="one-half last-column">
-                            <a href="pageapp-forgot.html" class="text-right font-11 color-white opacity-50">Fogot Credentials</a>
-                        </div>
                         <div class="clear"></div>
-                        <button id="loginBtn" class="button button-full button-m shadow-large button-round-small bg-highlight top-30 bottom-0">LOGIN</button>
+                        <button id="loginBtn" class="button button-full button-m shadow-large button-round-small bg-green1-dark top-30 bottom-0">LOGIN</button>
                     </div>
-
                 </div>
-            </div>   
-            <div class="caption-overlay bg-black opacity-90"></div>
-            <div class="caption-bg" style="background-image:url(images/pictures/29t.jpg)"></div>
+
+                    
+            </div>
         </div>
     </div>
     <!-- Page Content Class Ends Here-->
@@ -185,7 +179,6 @@
             </a>
         </div>
     </div>
-
     <div class="menu-hider"></div>
 </div>
 
@@ -195,7 +188,6 @@
 <script>
     $("#loginBtn").click(function(){
         var currentIp = location.host;
-        var socket = io.connect('192.168.0.26:3000');
         $.ajax({
             url : "http://"+currentIp+"/login",
             type : 'post',
@@ -211,15 +203,13 @@
                 }
                 if(data == 3){
                     alert("존재하지 않는 아이디입니다.");
-                    window.location.herㅋf = "/";
+                    window.location.herf = "/";
                 }
                 if(data.length > 5){
-                    window.location.href = "/main";
-                    // socket.io 서버에 접속한다
+                    window.location.href = "/main?token="+data;
                 }
             }
         })
     })
 </script>
-
 </body>
