--- a/views/login.ejs
+++ b/views/login.ejs
@@ -206,7 +206,7 @@
                     window.location.herf = "/";
                 }
                 if(data.length > 5){
-                    window.location.href = "/main?token="+data;
+                    window.location.href = "/main";
                 }
             }
         })
