--- a/views/connect.ejs
+++ b/views/connect.ejs
@@ -208,7 +208,7 @@ $.ajax({
             $("#cardList").append(
                 '<div class="left-10 right-10">\n' +
                 '    <div class="blog-categories blog-categories-3 bottom-10">\n' +
-                '        <div onclick="economy()" ontouchend="economy()"><a id="friend" class="shadow-large round-large"><img src='+url+' data-src='+url+' class="preload-image responsive-image" alt="img" style="float: left"></a></div>\n' +
+                '        <div onclick="economy()" ontouchend="economy()"><a id="friend" class="shadow-large round-large"><img src='+url+' data-src='+url+' class="preload-image responsive-image" alt="img"></a></div>\n' +
                 '        <div class="clear"></div>\n' +
                 '    </div>\n' +
                 '</div>\n'
